<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="E_PneumaticMode" Id="{8d59e371-0acf-0583-34a1-fd0fac831808}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_PneumaticMode :
(   eSingleSolenoidControl := 0, //Single solenoid valve with spring return
    eReset := 1,
    eError := 2
):= eSingleSolenoidControl;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>