<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_PneumaticAxisStatus" Id="{834f971f-5bf6-0da5-0505-eb536ce0d2fb}">
    <Declaration><![CDATA[TYPE ST_PneumaticAxisStatus :
STRUCT
    bExtending: BOOL; //Extending movement status
    bRetracting: BOOL; //Retraction movement status
    bExtended: BOOL; //Cylinder extracted status
    bRetracted: BOOL; //Cylinder retracted status
    nTimeElapsedExtend: INT; //Elapsed time while extracting cylinder
    nTimeElapsedRetract: INT; //Elapsed time while retracting cylinder
    bSolenoidActive: BOOL; //Status input of valve solenoid
    sStatus: STRING; //Pneumatic cylinder current status
    bInterlocked: BOOL; //Interlock siganl active
    bPSSPermitOK: BOOL; //Status of the PSS permit signal
    bAirPressureLow: BOOL; //Warning bit for the Low air pressure value
    bAirPressureHigh: BOOL; //Warning bit for the High air pressure value
    bError: BOOL; //Pneumatic axis is in Error state
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>